--- a/css/styles.css
+++ b/css/styles.css
@@ -223,7 +223,8 @@ body {
 }
 
 .contacts-photo img {
-  max-width: 720px;
+  /* max-width: 720px; 
+  max-height: 500px; */
   width: 100%;
   height: 100%;
   object-fit: cover;
@@ -302,7 +303,7 @@ body {
 
 .portfolio-grid__container {
   display: grid;
-  grid-template-columns: repeat(2, 1fr);
+  grid-template-columns: repeat(3, 1fr);
   gap: 1px;
   padding: 1px;
 }
