--- a/css/media.css
+++ b/css/media.css
@@ -125,10 +125,10 @@
     }
 
        .portfolio-grid__container {
-    display: grid;
+    /* display: grid; */
     grid-template-columns: repeat(1, 1fr);
-    gap: 1px;
-    padding: 1px;
+    /* gap: 10px;
+    padding: 5px; */
 
 }
 
