--- a/css/media.css
+++ b/css/media.css
@@ -140,6 +140,10 @@
     display: flex !important;
   }
 
+  .portfolio-item__container-item {
+    padding-bottom: 25px;
+  }
+
 }
 
 @media (min-width: 1025px) {
