--- a/css/styles.css
+++ b/css/styles.css
@@ -132,6 +132,7 @@ body {
     width: 100%;
     height: 100%;
     object-fit: cover;
+    object-position: 50% 0%;
 }
 
 /* FOOTER */
@@ -452,6 +453,12 @@ body {
     font-family: 'Exo 2-Light';
     font-size: 36px;
     font-weight: 200;
+}
+
+.portfolio-header__link:hover {
+    color: #bdbcbe;
+    transition: ease-in-out 0.2s;
+
 }
 
 .album-header__link {
